@@ -835,6 +835,9 @@ void Client::ApplyAABonuses(uint32 aaid, uint32 slots, StatBonuses* newbon)
 			case SE_ConsumeProjectile:
 				newbon->ConsumeProjectile += base1;
 				break;
+            case SE_ForageAdditionalItems:
+                newbon->ForageAdditionalItems += base1;
+                break;
 			case SE_ArcheryDamageModifier:
 				newbon->ArcheryDamageModifier += base1;
 				break;
@@ -2192,6 +2195,10 @@ void Mob::ApplySpellsBonuses(uint16 spell_id, uint8 casterlevel, StatBonuses* ne
 				newbon->ConsumeProjectile += effect_value;
 				break;
 
+            case SE_ForageAdditionalItems:
+                newbon->ForageAdditionalItems += effect_value;
+                break;
+
 			case SE_ArcheryDamageModifier:
 				newbon->ArcheryDamageModifier += effect_value;
 				break;
@@ -3330,6 +3337,12 @@ void Mob::NegateSpellsBonuses(uint16 spell_id)
 					aabonuses.ConsumeProjectile = effect_value;
 					itembonuses.ConsumeProjectile = effect_value;
 					break;
+
+                case SE_ForageAdditionalItems:
+                    spellbonuses.ForageAdditionalItems = effect_value;
+                    aabonuses.ForageAdditionalItems = effect_value;
+                    itembonuses.ForageAdditionalItems = effect_value;
+                    break;
 
 				case SE_ArcheryDamageModifier:
 					spellbonuses.ArcheryDamageModifier = effect_value;
