@@ -1,6 +1,10 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 
+== 04/04/2013 ==
+demonstar55: Implemented SE_ForageAdditionalItems as a bonus
+required SQL: 2013_04_04_NaturesBounty.sql
+
 == 04/2/2013 ==
 Bad_Captain: Fixed Merc lack of use of heal over time spells (causing excessive healing).
 Bad_Captain: Fixed pet mitigation/AC issues.
